--- a/KalamazoDefteri/Views/Firmalar/CompanyView.cshtml
+++ b/KalamazoDefteri/Views/Firmalar/CompanyView.cshtml
@@ -1,8 +1,7 @@
 ﻿@model KalamazoDefteri.ViewModels.CompaniesViewOne
 @{
-    ViewBag.Title = "Company View";
+    ViewBag.Title = "FİRMA DETAY";
 }
-
 <div class="col-12">
     <div class="card mt-5">
         <div class="card-body">
