--- a/KalamazoDefteri/Views/Firmalar/NewCompany.cshtml
+++ b/KalamazoDefteri/Views/Firmalar/NewCompany.cshtml
@@ -1,13 +1,13 @@
 ﻿@model KalamazoDefteri.ViewModels.CompaniesNew
 @{
-    ViewBag.Title = "Company View";
+    ViewBag.Title = "YENİ FİRMA OLUŞTUR";
 }
 
 
 <div class="col-12">
     <div class="card mt-5">
         <div class="card-body">
-            <h4 class="header-title">FİRMA GÖRÜNTÜLE</h4>
+            <h4 class="header-title">YENİ FİRMA EKLE</h4>
             @using (Html.BeginForm())
             {
             <div class="form-group">
@@ -22,7 +22,6 @@
             <div class="form-group">
                 <label for="example-email-input" class="col-form-label">Fax Numarası :</label>
                 @Html.TextBoxFor(u => u.faxNumber, new { @class = "form-control", @id="faxNumber" })
-
             </div>
                 <div class="form-group">
                     <label for="example-email-input" class="col-form-label">IBAN : </label>
@@ -55,3 +54,4 @@
         </div>
     </div>
 </div>
+
