--- a/KalamazoDefteri/Views/Shared/_companyIncomes.cshtml
+++ b/KalamazoDefteri/Views/Shared/_companyIncomes.cshtml
@@ -36,7 +36,7 @@
             <tr>
                 <th scope="row"></th>
                 <td></td>
-                <td style="text-align:right;">Toplam Gelir : </td>
+                <td style="text-align:right; font-weight:bold;">Toplam Gelir : </td>
                 <td>@(sum)</td>
                 <td></td>
             </tr>
